--- a/cuffie/cuffie.html
+++ b/cuffie/cuffie.html
@@ -4,7 +4,7 @@
   	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Alex Corgiat</title>
+	<title>Cuffie</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- main css -->
